--- a/models.yaml
+++ b/models.yaml
@@ -13,6 +13,13 @@ flux-dev:
     license_name: flux-1-dev-non-commercial-license
     license_link: https://huggingface.co/black-forest-labs/FLUX.1-dev/blob/main/LICENSE.md
     file: flux1-dev.sft
+flux-kontext-dev:
+    repo: black-forest-labs/FLUX.1-Kontext-dev
+    base: black-forest-labs/FLUX.1-Kontext-dev
+    license: other
+    license_name: flux-1-dev-non-commercial-license
+    license_link: https://huggingface.co/black-forest-labs/FLUX.1-Kontext-dev/blob/main/LICENSE.md
+    file: flux1-kontext-dev.sft
 flux-schnell:
     repo: black-forest-labs/FLUX.1-schnell
     base: black-forest-labs/FLUX.1-schnell
