--- a/models.yaml
+++ b/models.yaml
@@ -19,7 +19,7 @@ flux-kontext-dev:
     license: other
     license_name: flux-1-dev-non-commercial-license
     license_link: https://huggingface.co/black-forest-labs/FLUX.1-Kontext-dev/blob/main/LICENSE.md
-    file: flux1-kontext-dev.sft
+    file: flux1-kontext-dev.safetensors
 flux-schnell:
     repo: black-forest-labs/FLUX.1-schnell
     base: black-forest-labs/FLUX.1-schnell
